# PhotoApp

./: .gitignore  README.md
PhotoApp/: AppDelegate.swift  AppEngine.swift  ViewController.swift
PhotoApp.xcodeproj/: project.pbxproj
PhotoApp.xcworkspace/: contents.xcworkspacedata
PhotoApp/Helpers/: Extensions.swift  ImageLoader.swift  NetworkService.swift
PhotoAppTests/: DetailViewControllerTests.swift  ModelTests.swift  PhotoAppTests.swift  TestHelper.swift
android/: settings.gradle.kts
android/app/: build.gradle.kts
boden/: CMakeLists.txt
boden/BodenDemo/: Launch Screen.storyboard
boden/BodenDemo/source/: AppController.cpp  MainViewController.cpp  MainViewController.h  PhotoCell.cpp  PhotoListViewDataSource.cpp
boden/source/: ListViewController.cpp  ListViewController.hpp  PhotoCell.hpp  PhotoListViewDataSource.hpp
component-kit/: Podfile
compose-multiplatform/: settings.gradle.kts
djinni/android/app/: CMakeLists.txt  build.gradle
djinni/android/app/src/androidTest/java/com/whackylabs/demo/photoapp/: ExampleInstrumentedTest.java
djinni/android/app/src/main/: AndroidManifest.xml
djinni/android/app/src/main/java/com/whackylabs/demo/photoapp/: MainActivity.java
flutter/: README.md  pubspec.yaml
ionic/: capacitor.config.ts  ionic.config.json  package-lock.json  package.json
ionic/src/: App.tsx  (+1 more)
jetpack-compose/: build.gradle.kts  settings.gradle.kts
kmm/: settings.gradle.kts
kotlin/: gradle.properties  settings.gradle
maui/: .env  PhotoApp.sln
react/: README.md  index.html  package-lock.json  package.json
react-native/: package-lock.json  package.json
swift/: Podfile  README.md
(+459 files in other folders)
